# hardonia-compliance-agent

./: .env.example  Cargo.toml  Dockerfile  docker-compose.yml
.github/workflows/: ci.yml
crates/agent/: Cargo.toml
crates/agent/src/: agent.rs
crates/api/: Cargo.toml
crates/api/src/: handlers.rs  lib.rs  middleware.rs  routes.rs  state.rs
crates/db/: Cargo.toml
crates/db/src/: lib.rs  repository.rs
crates/domain/: Cargo.toml
crates/domain/src/: models.rs
crates/integrations/: Cargo.toml
crates/integrations/src/: clients.rs
crates/shared/: Cargo.toml
crates/shared/src/: config.rs  error.rs  lib.rs
docs/: STATUS.md  deployment.md  pilot-materials.md
migrations/: 001_initial_schema.sql
scripts/: setup_stripe_prices.py
