[package]
name = "compliance_db"
version = { workspace = true }
edition = "2021"
license = { workspace = true }
repository = { workspace = true }
publish = false

[dependencies]
tokio = { workspace = true }
sqlx = { workspace = true }
redis = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
rust_decimal = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
config = { workspace = true }
figment = { workspace = true }
async-trait = { workspace = true }

compliance_domain = { path = "../domain" }
compliance_shared = { path = "../shared" }

[dev-dependencies]
tokio = { workspace = true }
sqlx = { workspace = true }
testcontainers = { workspace = true }