[package]
name = "compliance_integrations"
version = { workspace = true }
edition = "2021"
license = { workspace = true }
repository = { workspace = true }
publish = false

[dependencies]
tokio = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
async-trait = { workspace = true }

compliance_domain = { path = "../domain" }
compliance_shared = { path = "../shared" }

[dev-dependencies]
tokio = { workspace = true }
mockall = "0.13"