[package]
name = "compliance_shared"
version = { workspace = true }
edition = "2021"
license = { workspace = true }
repository = { workspace = true }
publish = false

[dependencies]
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
config = { workspace = true }
figment = { workspace = true }
once_cell = { workspace = true }
parking_lot = { workspace = true }
dashmap = { workspace = true }
sqlx = { workspace = true }
redis = { workspace = true }
reqwest = { workspace = true }

[dev-dependencies]
tokio = { workspace = true }